<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SuperNe</string>
    <string name="title_activity_tabbar">Tabbar</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="conversation">Chats</string>
    <string name="contact">Contacts</string>
    <string name="discover">Discover</string>
    <string name="me">Me</string>

    <!-- contact -->
    <string name="recommend_friend">Recommended Friends</string>
    <string name="groups">Groups</string>
    <!-- discover -->
    <string name="moments">Moments</string>
    <string name="people_nearby">People NearBy</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="scan_tips">Align the QR Code within the frame to scan</string>

    <!-- profile -->
    <string name="my_photoAlbum">My Posts</string>
    <string name="my_weibo">Weibo</string>
    <string name="my_location">My Location</string>
    <string name="change_password">Modify Password</string>
    <string name="system_not">Notification</string>
    <string name="logout">Log out</string>

    <!-- login -->
    <string name="input_accountmobile">mobile</string>
    <string name="input_password">password</string>
    <string name="remember_password">remember</string>
    <string name="login">login</string>
    <string name="init">init...</string>
    <string name="loading">loading...</string>
    <string name="vertify_success">vertify success</string>
    <string name="no_account">Sign Up</string>
    <string name="unremeber_password">Forgot?</string>

    <!-- register -->
    <string name="register">Register</string>
    <string name="only_support_chinese_mobile">Only support Chinese mobile now</string>
    <string name="region">Country Or Region</string>
    <string name="input_mobile">input mobile please</string>
    <string name="input_nickname">nickname</string>

    <!-- Search -->
    <string name="search">Search</string>
    <string name="search_by_phone">Search By Phone</string>
    <string name="search_result">Result</string>
    <string name="user_not_found">User not found</string>

    <!-- App exeception -->
    <string name="network_not_connected">network not connected</string>
    <string name="xml_parser_failed">xml_parser_failed</string>
    <string name="io_exception_error">io_exception_error</string>
    <string name="http_status_code_error">http_status_code_error：%d</string>
    <string name="http_exception_error">http_exception_error</string>
    <string name="socket_exception_error">socket_exception_error</string>
    <string name="app_run_code_error">app_run_code_error</string>

    <!-- General -->
    <string name="ok">OK</string>

    <!-- 网络和内存卡提示 -->
    <string name="prompt">Prompt</string>
    <string name="check_connection">network not connected, check connection！</string>
    <string name="check_sdcard">check_sdcard！</string>
    <string name="close">Close</string>
    <string name="exit">Exit</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="menu_settings">menu settings</string>

    <!-- Country -->
    <string name="china">China</string>
    <string name="title_activity_chat">聊天</string>

</resources>
