<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
              android:orientation="vertical"
              android:background="@android:color/white"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/ic_launcher"
            android:scaleType="centerCrop"/>

    <EditText android:id="@+id/edtAcount"
              android:background="@drawable/login_input"
              android:paddingLeft="10dp"
              android:layout_width="match_parent"
              android:layout_height="50dp"
              android:layout_marginLeft="30dp"
              android:layout_marginTop="20dp"
              android:layout_marginRight="30dp"
              android:hint="@string/input_accountmobile" />

    <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/login_input"
            android:ems="10"
            android:hint="@string/input_password"
            android:inputType="textPassword"
            android:paddingLeft="10dp" >

        <requestFocus />
    </EditText>

    <RelativeLayout
            android:id="@+id/recordPswFrame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="20dp">

        <CheckBox
                android:id="@+id/login_checkBox_remember_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:textSize="13dp"
                android:textColor="@android:color/black"
                android:text="@string/remember_password" />

        <TextView
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:id="@+id/login_unremember_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unremeber_password"
                android:textColor="@color/green"
                android:layout_marginRight="20dp"
                android:textSize="16sp" />
    </RelativeLayout>

    <Button android:textSize="20dp"
            android:textColor="@android:color/white"
            android:id="@+id/btnLogin"
            android:background="@drawable/login_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="10dp"
            android:text="@string/login"
            android:onClick="ButtonClick"
            />

    <Button android:layout_gravity="right"
            android:id="@+id/btnReg"
            android:background="@null"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="10dp"
            android:text="@string/no_account"
            android:onClick="ButtonClick"
            />

</LinearLayout>