<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context="com.donal.superne.app.ui.register.Register">

    <include layout="@layout/navigationbar"/>

    <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="18dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/only_support_chinese_mobile"/>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/login_input"
            >
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:textColor="@android:color/black"
                    android:textSize="18dp"
                    android:layout_marginLeft="5dp"
                    android:text="@string/region"
                    />
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:background="@null"
                    android:layout_centerVertical="true"
                    android:textColor="@android:color/black"
                    android:textSize="18dp"
                    android:gravity="center_vertical|right"
                    />
    </RelativeLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            >
        <TextView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="0.3"
                android:layout_centerVertical="true"
                android:textColor="@android:color/black"
                android:textSize="18dp"
                android:text="+86"
                android:background="@drawable/login_input"
                android:gravity="center"
                />
        <EditText
                android:layout_marginLeft="15dp"
                android:layout_weight="0.6"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_alignParentRight="true"
                android:background="@drawable/login_input"
                android:layout_centerVertical="true"
                android:textColor="@android:color/black"
                android:textSize="18dp"
                android:gravity="center_vertical|left"
                android:paddingLeft="10dp"
                android:hint="@string/input_mobile"
                android:id="@+id/edtAccount"
                />
    </LinearLayout>

    <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="15dp"
            android:text="@string/register"
            android:textColor="@color/register_button_text"
            android:textSize="18dp"
            android:background="@drawable/login_button"
            android:enabled="false"
            android:id="@+id/btnReg"
            android:onClick="ButtonClick"
            />

</LinearLayout>
