<?xml version="1.0" encoding="utf-8"?>
<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@android:id/tabhost"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@android:color/white"
        >
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
        <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="fill_parent"
                android:layout_height="0.0dip"
                android:layout_weight="1.0"/>
        <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.0"
                android:visibility="gone"/>
        <LinearLayout
                android:id="@+id/main_tab"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:layout_gravity="bottom"
                android:background="@color/tabbar"
                android:visibility="visible"
                android:fadingEdge="none"
                >
            <RelativeLayout
                    android:onClick="ButtonClick"
                    android:id="@+id/radio_button1"
                    style="@style/main_tab_bottom"
                    >
                <View
                        android:duplicateParentState="true"
                        android:layout_width="match_parent"
                        android:layout_height="0.5px"
                        android:background="#959595"
                        />
                <ImageView
                        android:duplicateParentState="true"
                        android:layout_marginTop="2dp"
                        android:layout_width="31dp"
                        android:layout_height="31dp"
                        android:background="@drawable/tab_coversation"
                        android:layout_centerHorizontal="true"
                        />
                <TextView
                        android:duplicateParentState="true"
                        android:layout_width="match_parent"
                        android:layout_height="18dp"
                        android:layout_alignParentBottom="true"
                        android:text="@string/conversation"
                        android:gravity="center_horizontal"
                        android:textColor="@color/tabbar_text_color"
                        android:layout_marginBottom="2dp"
                        android:textSize="@dimen/tab_textsize"
                        />
            </RelativeLayout>
            <RelativeLayout
                    android:onClick="ButtonClick"
                    android:id="@+id/radio_button2"
                    style="@style/main_tab_bottom"
                    >
                <View
                        android:duplicateParentState="true"
                        android:layout_width="match_parent"
                        android:layout_height="0.5px"
                        android:background="#959595"
                        />
                <ImageView
                        android:duplicateParentState="true"
                        android:layout_marginTop="2dp"
                        android:layout_width="31dp"
                        android:layout_height="31dp"
                        android:background="@drawable/tab_contact"
                        android:layout_centerHorizontal="true"
                        />
                <TextView
                        android:duplicateParentState="true"
                        android:layout_width="match_parent"
                        android:layout_height="18dp"
                        android:layout_alignParentBottom="true"
                        android:text="@string/contact"
                        android:gravity="center_horizontal"
                        android:textColor="@color/tabbar_text_color"
                        android:layout_marginBottom="2dp"
                        android:textSize="@dimen/tab_textsize"
                        />
            </RelativeLayout>
            <RelativeLayout
                    android:onClick="ButtonClick"
                    android:id="@+id/radio_button3"
                    style="@style/main_tab_bottom"
                    >
                <View
                        android:duplicateParentState="true"
                        android:layout_width="match_parent"
                        android:layout_height="0.5px"
                        android:background="#959595"
                        />
                <ImageView
                        android:layout_marginTop="2dp"
                        android:duplicateParentState="true"
                        android:layout_width="31dp"
                        android:layout_height="31dp"
                        android:background="@drawable/tab_discover"
                        android:layout_centerHorizontal="true"
                        />
                <TextView
                        android:duplicateParentState="true"
                        android:layout_width="match_parent"
                        android:layout_height="18dp"
                        android:layout_alignParentBottom="true"
                        android:text="@string/discover"
                        android:gravity="center_horizontal"
                        android:textColor="@color/tabbar_text_color"
                        android:layout_marginBottom="2dp"
                        android:textSize="@dimen/tab_textsize"
                        />
            </RelativeLayout>

            <RelativeLayout
                    android:onClick="ButtonClick"
                    android:id="@+id/radio_button4"
                    style="@style/main_tab_bottom"
                    >
                <View
                        android:duplicateParentState="true"
                        android:layout_width="match_parent"
                        android:layout_height="0.5px"
                        android:background="#959595"
                        />
                <ImageView
                        android:duplicateParentState="true"
                        android:layout_marginTop="2dp"
                        android:layout_width="31dp"
                        android:layout_height="31dp"
                        android:background="@drawable/tab_profile"
                        android:layout_centerHorizontal="true"
                        />
                <TextView
                        android:duplicateParentState="true"
                        android:layout_width="match_parent"
                        android:layout_height="18dp"
                        android:layout_alignParentBottom="true"
                        android:text="@string/profile"
                        android:gravity="center_horizontal"
                        android:textColor="@color/tabbar_text_color"
                        android:layout_marginBottom="2dp"
                        android:textSize="@dimen/tab_textsize"
                        />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</TabHost>
